[package]
name = "fracture"
version = "0.1.0"
edition = "2024"
authors = ["Zaid Ahmed <zaahme18@gmail.com>"]
description = "Zero-config chaos testing that matches tokio's API exactly"
license = "MIT"
repository = "https://github.com/ZA1815/fracture"
keywords = ["chaos", "testing", "distributed", "simulation", "deterministic", "fracture"]
categories = ["development-tools::testing", "network-programming"]

[dependencies]
tokio = { version = "1.41", features = ["full"] }

turmoil = { version = "0.6", optional = true }

tokio-util = { version = "0.7", features = ["full"] }
bytes = "1.5"
futures = "0.3"
pin-project = "1.1"

rand = "0.8"
rand_chacha = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

thiserror = "1.0"
anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

fracture-macros = { path = "../fracture-macros", optional = true }

dashmap = "5.5"
arc-swap = "1.6"

parking_lot = "0.12"

[features]
default = ["simulation"]
simulation = ["turmoil"] # "fracture-macro" ADD LATER
full-chaos = ["simulation"]

[dev-dependencies]
pretty_assertions = "1.4"
proptest = "1.4"
criterion = "0.5"