[package]
name = "fracture"
version = "0.1.1"
edition = "2024"
authors = ["Zaid Ahmed <zaahme18@gmail.com>"]
description = "Zero-config chaos testing, drop-in replacement for Tokio"
license = "MIT"
repository = "https://github.com/ZA1815/fracture"
keywords = ["chaos", "testing", "distributed", "simulation", "deterministic"]
categories = ["development-tools::testing", "network-programming"]

[dependencies]
bytes = "1.5"

futures = "0.3"
pin-project = "1.1"

rand = "0.8"
rand_chacha = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

thiserror = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

fracture-macros = { version = "0.1.0", optional = true }

dashmap = "5.5"
arc-swap = "1.6"

parking_lot = "0.12"
num_cpus = "1.17.0"
slab = "0.4.11"

[dependencies.tokio]
version = "1.48.0"
features = ["full"]
optional = true

[features]
default = ["simulation", "full"]
simulation = ["fracture-macros"]

rt = []
rt-multi-thread = ["rt"]
io-util = []
io-std = []
net = []
time = []
fs = []
process = []
signal = []
sync = []
macros = ["fracture-macros"]
test-util = ["simulation"]
stream = []

full = [
    "rt-multi-thread",
    "io-util",
    "io-std",
    "net",
    "time",
    "fs",
    "process",
    "signal",
    "sync",
    "macros",
    "stream"
]

full-chaos = ["simulation", "full"]

[dev-dependencies]
pretty_assertions = "1.4"
proptest = "1.4"
criterion = "0.5"
