[package]
name = "tokio"
version = "1.41.0"
edition = "2021"
publish = false

[dependencies]
fracture = { path = "../../fracture", version = "0.1.0", features = ["simulation", "full"] }

[features]
default = []
full = []
rt = []
rt-multi-thread = []
io-util = []
io-std = []
net = []
time = []
process = []
macros = []
sync = []
signal = []
fs = []
test-util = []