[package]
name = "fracture-linter"
version = "0.1.0"
edition = "2024"

[dependencies]
fracture-ir = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }

[lib]
name = "fracture_linter"
path = "src/lib.rs"

[[bin]]
name = "fracture-lint"
path = "src/main.rs"