[package]
name = "fracture-rift"
version = "0.1.0"
edition = "2024"

[dependencies]
fracture-ir = { workspace = true }
fracture-linter = { workspace = true }
fracture-compiler = { workspace = true }

serde = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }

semver = { version = "1.0", features = ["serde"] }
colored = "2.1"
dirs = "6.0.0"

[lib]
name = "fracture_rift"
path = "src/lib.rs"

[[bin]]
name = "rift"
path = "src/main.rs"